# aries-vcr

./: .angulardoc.json  .gitattributes  .gitignore  .gitlab-ci.yml  COMPLIANCE.yaml  LICENSE  README.md  ResettingTheLedger.md  icat-prep.sh
.circleci/: config.yml
.github/: dependabot.yml
APISpec/: TOBswagger.yaml
agent/: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
agent-driver/: README.md
client/: README.md  ThemeDevelopment.md  angular.json  build-theme.js  package-lock.json  package.json  tsconfig.json  tslint.json  watch-theme.js
credential-registry/: README.md
docker/: README.md  docker-compose-debug.yml  docker-compose.dev.yml  docker-compose.yml  manage  manage.sh
docs/: CRArchitecture.puml  IndyCat-REST-Hooks.md  IndyCat-REST-Services.md  IndyCat-Search-Integration.md  README.md  Schema-changes.md  Subscription-Web-Hooks.md  create-new-credential-registry.md  fix-corrupt-wallet-index.md
echo-service/: README.md  manage.py  requirements.txt  run_docker.sh  start.sh
server/: README.md
server/message_families/issuer_registration/: pyproject.toml  requirements.txt  setup.py
server/message_families/issuer_registration/indy_catalyst_issuer_registration/: manager.py  message_types.py  routes.py
server/message_families/issuer_registration/indy_catalyst_issuer_registration/handlers/: registration_handler.py
server/message_families/issuer_registration/indy_catalyst_issuer_registration/messages/: register.py
server/message_families/issuer_registration/indy_catalyst_issuer_registration/models/: issuer_registration_state.py
(+658 files in other folders)
