[tool.poetry]
name = "indy-catalyst-issuer-registration"
version = "0.1.0"
description = ""
authors = ["Ian Costanzo <ian@anon-solutions.ca>"]
packages = [{include = "indy_catalyst_issuer_registration"}]

[tool.poetry.dependencies]
python = ">=3.6.13,<4.0"
marshmallow = ">=3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
